   * status.StatusList
   * structure.Structure
   * types.AssetType
   * department.Department
   * user.User
   * mixin.ReferenceMixin
 * added tests of the Project class
 * completed the first implementation of the Project class
 * to be able to use assertIsInstance method of mocker.MockerTestCase all the
   unittest.TestCase test classes are converted to mocker.MockerTestCase

v0.1.1.a4:
 * changed the arguments of the stalker.db.mixins.ReferenceMixin.setup
   function, to allow carrying the data from one to the next mixin (this part
   still needs a lot of attention)
 * removed the unnecessary "statusedEntity_statuses" secondary table, because
   one StatusedEntity owns just one StatusList its a many2one relation, so no
   need to have a secondary table
 * introduced the StatusMixin (will replace StatusedEntity soon)
 * added a new example for the usage of StatusMixin
 * updated the ReferenceMixin.setup function, now it takes three arguments, the
   class, table and the mapper_options dictionary

v0.1.1.a3:
 * removed the included *tests* from the egg build
 * added/fixed equality and inequality operators for classes:
  * Department
  * StatusedEntity
 * SimpleEntity now has a **kwargs in the __init__ so it doesn't give TypeError
   for extra keywords
 * added EntityMeta metaclass which adds entity_type attribute and sets its
   value to the unicode version of the name of the class
 * the SimpleEntity uses the EntityMeta metaclass to automatically add all the
   entity_type attribute to all the derived classes
 * all the mappers now uses the ClassName.entity_type class attribute as the
   polymorphic identity
 * instead of LBYL moving toward EAFP idiom for all the models in the
   stalker.core
 * StatusList now supports indexing
 * StatusList now has an target_entity_type attribute which accepts strings
   with the class name and shows the compatible class of this StatusList
 * StatusList.__eq__ now checks for the target_entity_type also